--- a/package.json
+++ b/package.json
@@ -1,28 +1,35 @@
 {
-  "name": "backend",
+  "name": "server-node",
   "version": "1.0.0",
+  "description": "O pass.in é uma aplicação de **gestão de participantes em eventos presenciais**.",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts"
+    "start": "node dist/server.mjs",
+    "build": "tsup src --format esm",
+    "dev": "tsx watch --env-file .env src/server.ts",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
-    "@types/node": "20.14.9",
-    "@types/nodemailer": "6.4.15",
-    "prisma": "5.16.1",
-    "tsx": "4.16.0",
-    "typescript": "5.5.2"
+    "@types/node": "20.11.30",
+    "prisma": "5.11.0",
+    "tsup": "8.0.2",
+    "tsx": "4.7.1",
+    "typescript": "5.4.3"
   },
   "dependencies": {
     "@fastify/cors": "9.0.1",
-    "@prisma/client": "5.16.1",
-    "dayjs": "1.11.11",
-    "fastify": "4.28.1",
-    "fastify-type-provider-zod": "2.0.0",
-    "nodemailer": "6.9.14",
-    "zod": "3.23.8"
+    "@fastify/swagger": "8.14.0",
+    "@fastify/swagger-ui": "3.0.0",
+    "@prisma/client": "5.11.0",
+    "fastify": "4.26.2",
+    "fastify-type-provider-zod": "1.1.9",
+    "zod": "3.22.4"
   }
 }
